<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_select_candidate"
            android:title="@string/select_candidate" />
    </group>

    <item android:title="@string/candidate_data">
        <menu>
            <item
                android:id="@+id/nav_personal"
                android:title="@string/personal_data" />
            <item
                android:id="@+id/nav_formation"
                android:title="@string/formation" />
            <item
                android:id="@+id/nav_experience"
                android:title="@string/professional_experience" />
            <item
                android:id="@+id/nav_courses"
                android:title="@string/courses" />
            <item
                android:id="@+id/nav_publications"
                android:title="@string/publications" />
        </menu>
    </item>
</menu>
